Ajuste layout tela de cadastro de usuário

--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -8,65 +8,31 @@
     android:scrollbarAlwaysDrawHorizontalTrack="true"
     tools:context=".activity.NovoUsuarioActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <EditText
+        android:id="@+id/edtNovoNome"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
+        android:layout_height="36dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"
-        android:background="#DBE4F9"
-        android:paddingBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/txvBemVindo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Novo Usuário"
-            android:textAlignment="center"
-            android:textColor="#131627"
-            android:textColorLink="#FFFFFF"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/edtNovoNome"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="30dp"
-            android:background="#FFFFFF"
-            android:ems="10"
-            android:hint="Nome"
-            android:inputType="textPersonName"
-            android:paddingLeft="40px"
-            android:textAlignment="viewStart"
-            android:textColor="#131627"
-            android:textColorLink="#FFFFFF"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/edtNovoDataNascimento"
-            app:layout_constraintEnd_toEndOf="@+id/edtNovoDataNascimento"
-            app:layout_constraintHorizontal_bias="0.563"
-            app:layout_constraintStart_toStartOf="@+id/edtNovoDataNascimento"
-            app:layout_constraintTop_toBottomOf="@+id/txvBemVindo" />
+        android:background="@drawable/edit_text_border"
+        android:hint="Nome"
+        android:inputType="textPersonName"
+        android:paddingLeft="40px"
+        android:textAlignment="viewStart"
+        android:textColor="#131627"
+        android:textColorLink="#FFFFFF"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/edtNovoDataNascimento"
+        app:layout_constraintEnd_toEndOf="@+id/edtNovoDataNascimento"
+        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintStart_toStartOf="@+id/edtNovoDataNascimento"
+        app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/edtNovoDataNascimento"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="Data de Nascimento"
             android:inputType="textPersonName"
             android:paddingLeft="40px"
@@ -84,8 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="Genero"
             android:inputType="textPersonName"
             android:paddingLeft="40px"
@@ -103,8 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="CPF"
             android:inputType="textPersonName"
             android:paddingLeft="40px"
@@ -122,8 +86,7 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="Telefone"
             android:paddingLeft="40px"
             android:textAlignment="viewStart"
@@ -140,8 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="Usuário"
             android:inputType="textPersonName"
             android:paddingLeft="40px"
@@ -159,8 +121,7 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="Senha"
             android:inputType="text"
             android:paddingLeft="40px"
@@ -178,8 +139,7 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:ems="10"
+            android:background="@drawable/edit_text_border"
             android:hint="Confirmar Senha"
             android:paddingLeft="40px"
             android:textAlignment="viewStart"
@@ -196,17 +156,15 @@
             android:layout_width="271dp"
             android:layout_height="55dp"
             android:layout_marginTop="30dp"
-            android:background="#131627"
-            android:text="Criar"
+            android:backgroundTint="#0F184C"
+            android:text="Salvar"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
-            android:textStyle="bold"
+            app:cornerRadius="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtNovoConfirmarSenha" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
