--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,9 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/purple_700</item>
     </style>
+
+    <style name="ActionBarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:background">@color/barraSuperiorCadastro</item>
+    </style>
+
 </resources>
