--- a/app/src/main/res/drawable/custom_selector.xml
+++ b/app/src/main/res/drawable/custom_selector.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:drawable="@drawable/check"
-        android:state_checked="false"/>
-    <item android:drawable="@drawable/layer"
-        android:state_checked="true"/>
-    <item android:drawable="@drawable/check"/>
+    <item android:drawable="@drawable/ic_grafico_circulo_vermelho" android:state_checked="false"/>
+    <item android:drawable="@drawable/ic_grafico_check_verde" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_grafico_circulo_vermelho"/>
 </selector>
