--- a/app/src/main/res/layout/fragment_grafico.xml
+++ b/app/src/main/res/layout/fragment_grafico.xml
@@ -59,7 +59,8 @@ tools:context=".fragment.GraficoFragment">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="6dp">
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="10dp">
     </com.github.mikephil.charting.charts.LineChart>
 
     <ImageView
