--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -10,6 +11,7 @@
     <color name="primary">#262c51</color>
     <color name="secondary">#8C9CFF</color>
     <color name="darkSecondary">#131627</color>
+    -->
 
     <color name="botaoSelecionado">#F3C641</color>
     <color name="textoBotaoSelecionado">#071025</color>
@@ -21,4 +23,10 @@
 
     <color name="corFundoCard">#A9BEE2</color>
     <color name="corTextoCard">#0F184C</color>
+
+    <color name="graficoCorFundo">#FFFFFF</color>
+    <color name="graficoCorRotuloEixos">#0F184C</color>
+    <color name="graficoCorGrade">#0F184C</color>
+    <color name="graficoCorPontoMarcado">#0F184C</color>
+    <color name="graficoCorLinhaEntrePontos">#0F184C</color>
 </resources>
