--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -1,17 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".fragment.CalendarioFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".fragment.CalendarioFragment">
 
-<!-- TODO: Update blank fragment layout -->
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="30dp"
-    android:textStyle="bold"
-    android:textColor="@android:color/holo_red_dark"
-    android:layout_centerInParent="true"
-    android:text="Tab 1" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="415dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="164dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/layoutCalendario"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="@+id/toolBar"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
+
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:background="@color/darkSecondary"
+            app:mcv_dateTextAppearance="@style/CustomCalendarWeek"
+            app:mcv_headerTextAppearance="@style/CustomCalendarWeek"
+            app:mcv_selectionColor="#00F"
+            app:mcv_selectionMode="none"
+            app:mcv_showOtherDates="all"
+            app:mcv_weekDayTextAppearance="@style/CustomCalendarDay" />
+
+    </LinearLayout>
+
 </RelativeLayout>
