--- a/app/src/main/res/layout/fragment_grafico.xml
+++ b/app/src/main/res/layout/fragment_grafico.xml
@@ -6,7 +6,7 @@ android:layout_height="match_parent"
 tools:context=".fragment.GraficoFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtTituloTabela"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -23,7 +23,7 @@ tools:context=".fragment.GraficoFragment">
         layout="@layout/layout_checks_exercicio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/txtTituloTabela"
         android:layout_marginTop="3dp" />
 
     <include
@@ -43,7 +43,7 @@ tools:context=".fragment.GraficoFragment">
         android:layout_marginTop="6dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtTituloGrafico"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bebida"
@@ -58,7 +58,7 @@ tools:context=".fragment.GraficoFragment">
         android:id="@+id/chart1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/txtTituloGrafico"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="10dp">
     </com.github.mikephil.charting.charts.LineChart>
