--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,13 +16,13 @@
     <style name="CustomCalendarDay" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:textSize">20sp</item>
         <item name="android:padding">20dp</item>
-        <item name="android:textColor">#fff</item>
+        <item name="android:textColor">#0F184C</item>
         <item name="android:fontFamily">@font/roboto</item>
     </style>
     <style name="CustomCalendarWeek" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:textSize">20sp</item>
         <item name="android:labelTextSize">50dp</item>
-        <item name="android:textColor">#fff</item>
+        <item name="android:textColor">#0F184C</item>
         <item name="android:layout_margin">60dp</item>
         <item name="android:layout_height">60sp</item>
         <item name="android:fontFamily">@font/roboto</item>
