--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,127 +11,149 @@
         android:id="@+id/toolBar"
         android:layout_width="415dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="164dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/layoutCalendario"
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="fill_parent"
+        android:layout_height="415dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+        app:layout_constraintTop_toBottomOf="@+id/toolBar"
+        app:layout_constraintVertical_bias="0.044"
+        app:mcv_dateTextAppearance="@style/CustomCalendarWeek"
+        app:mcv_headerTextAppearance="@style/CustomCalendarWeek"
+        app:mcv_selectionColor="#F3C641"
+        app:mcv_selectionMode="none"
+        app:mcv_showOtherDates="none"
+        app:mcv_weekDayTextAppearance="@style/CustomCalendarDay"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
-
-        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="fill_parent"
-            android:layout_height="415dp"
-            android:background="#FFFFFF"
-            app:mcv_dateTextAppearance="@style/CustomCalendarWeek"
-            app:mcv_headerTextAppearance="@style/CustomCalendarWeek"
-            app:mcv_selectionColor="#F3C641"
-            app:mcv_selectionMode="none"
-            app:mcv_showOtherDates="none"
-            app:mcv_weekDayTextAppearance="@style/CustomCalendarDay" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/plainText2"
-        android:textColor="@color/dotAzul"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutCalendario"
-        android:textSize="50dp"
-        android:layout_marginLeft="20dp"
-        android:text="•" />
-    <TextView
-        android:id="@+id/plainText3"
-        android:textColor="@color/dotVermelho"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/plainText2"
-        android:layout_marginTop="-40dp"
-        android:layout_marginLeft="20dp"
-        android:textSize="50dp"
-        android:text="•" />
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
-    <TextView
-        android:id="@+id/plainText4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/plainText3"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="-40dp"
-        android:text="•"
-        android:textColor="@color/dotLaranja"
-        android:textSize="50dp" />
+        <TextView
+            android:id="@+id/plainText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:text="•"
+            android:textColor="@color/dotAzul"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView7" />
 
-    <TextView
-        android:id="@+id/plainText5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/plainText4"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="-40dp"
-        android:text="•"
-        android:textColor="@color/dotVerde"
-        android:textSize="50dp" />
+        <TextView
+            android:id="@+id/plainText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/plainText2"
+            android:layout_marginStart="96dp"
+            android:text="•"
+            android:textColor="@color/dotVermelho"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView8"
+            app:layout_constraintStart_toEndOf="@+id/textView8"
+            app:layout_constraintTop_toTopOf="@+id/textView8"
+            app:layout_constraintVertical_bias="0.574" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:textColor="@color/dotVermelho"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView7"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="06dp"
-        android:layout_toEndOf="@+id/plainText5"
-        android:fontFamily="@font/roboto"
-        android:textSize="15dp"
-        android:textFontWeight="600"
-        android:text="Bebida" />
+        <TextView
+            android:id="@+id/plainText4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/plainText3"
+            android:layout_marginStart="120dp"
+            android:text="•"
+            android:textColor="@color/dotLaranja"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView9"
+            app:layout_constraintStart_toEndOf="@+id/textView7"
+            app:layout_constraintTop_toTopOf="@+id/textView9" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutCalendario"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="25dp"
-        android:layout_toEndOf="@+id/plainText4"
-        android:fontFamily="@font/roboto"
-        android:text="Sono"
-        android:textColor="@color/dotAzul"
-        android:textFontWeight="600"
-        android:textSize="15dp" />
+        <TextView
+            android:id="@+id/plainText5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/plainText4"
+            android:layout_marginStart="24dp"
+            android:text="•"
+            android:textColor="@color/dotVerde"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView8" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:textColor="@color/dotVerde"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView9"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="06dp"
-        android:layout_toEndOf="@+id/plainText3"
-        android:fontFamily="@font/roboto"
-        android:textFontWeight="600"
-        android:textSize="15dp"
-        android:text="Remédio" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView7"
+            android:layout_toEndOf="@+id/plainText5"
+            android:fontFamily="@font/roboto"
+            android:text="Bebida"
+            android:textColor="@color/dotVermelho"
+            android:textFontWeight="600"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.16"
+            app:layout_constraintStart_toEndOf="@+id/plainText3"
+            app:layout_constraintTop_toBottomOf="@+id/textView9"
+            app:layout_constraintVertical_bias="0.489" />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:textColor="@color/dotLaranja"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="06dp"
-        android:layout_toEndOf="@+id/plainText2"
-        android:fontFamily="@font/roboto"
-        android:textSize="15dp"
-        android:textFontWeight="600"
-        android:text="Exercício" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_toEndOf="@+id/plainText4"
+            android:fontFamily="@font/roboto"
+            android:text="Sono"
+            android:textColor="@color/dotAzul"
+            android:textFontWeight="600"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/plainText2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView9"
+            android:layout_marginStart="24dp"
+            android:layout_toEndOf="@+id/plainText3"
+            android:fontFamily="@font/roboto"
+            android:text="Remédio"
+            android:textColor="@color/dotVerde"
+            android:textFontWeight="600"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/plainText5"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView6"
+            android:layout_toEndOf="@+id/plainText2"
+            android:fontFamily="@font/roboto"
+            android:text="Exercício"
+            android:textColor="@color/dotLaranja"
+            android:textFontWeight="600"
+            android:textSize="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.157"
+            app:layout_constraintStart_toEndOf="@+id/plainText4"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
