--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -34,6 +34,21 @@
         <item name="android:textSize">20dp</item>
         <!-- Divider color -->
         <item name="colorControlNormal">#F3C641</item>
+    </style>
+
+    <style name="SwitchStyle" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">#0F184C</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#1c000000</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#42221f1f</item>
+
+        <item name="android:textColor">#0F184C</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:font" tools:targetApi="o">@font/roboto</item>
     </style>
 
 </resources>
